examples/negative/parser_syntax/let_if_pattern.kai
# Negative fixture (#520 / parser): `if` is a reserved keyword
# and may not appear in pattern position. Parser must reject.

fn main() : Int {
  let if = 1
  0
}
